k8s/dev-cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-cluster-ingress
  namespace: coco
spec:
  rules:
    - host: bg.coco-dev.com
      http:
        paths:
          - backend:
              service:
                name: coco-user-bg
                port:
                  number: 80
            path: /coco-user-bg/
            pathType: Prefix

    - host: short.coco-dev.com
      http:
        paths:
          - backend:
              service:
                name: coco-short-link-bg
                port:
                  number: 80
            path: /
            pathType: Prefix

#    - host: www.coco-dev.com
#      http:
#        paths:
#          - backend:
#              service:
#                name: google-storage-buckets
#                port:
#                  number: 443
#            path: /(.*)
#            pathType: ImplementationSpecific
